<resources>
    <string name="app_name">我的记账簿</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="budget">预算剩余</string>
    <string name="see_analysis">查看图表分析</string>
    <string name="add_comment">添加备注</string>
    <string name="comment">备注</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="please_input_time">请输入时间</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_type">其他</string>
    <string name="input_money">输入金额</string>
    <string name="statistic_today">今日支出 ￥0 收入 ￥0</string>
    <string name="set_budget">设置预算</string>
    <string name="yuan">￥</string>
    <string name="please_input_comment">请输入搜索内容</string>
    <string name="no_data">暂无数据</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history">历史</string>
    <string name="info">详情</string>

    <string name="about_app_info">应用信息</string>
    <string name="about_version">版本</string>
    <string name="version">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="app">Android开发入门级应用，无实用性。</string>
    <string name="about_project">关于项目</string>
    <string name="about_me">关于我</string>
    <string name="me">Github主页: https://github.com/li192863\n邮箱: li192863@163.com</string>
    <string name="about_source_code">源代码</string>
    <string name="source_code">见Github: https://github.com/li192863/a-simple-tally</string>
    <string name="history_info">本月账单记录</string>

    <string name="clear_all_records">清空所有记录</string>
    <string name="outcome">支出</string>
    <string name="income">收入</string>

</resources>