<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_f3f3f3"
    tools:context=".activity.AboutActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <!-- 关闭按钮 -->
        <ImageView
            android:id="@+id/about_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_back"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:onClick="onClick"/>
        <!-- 页面标题 -->
        <TextView
            android:id="@+id/about_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/about"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <!-- 应用信息 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_info"/>
        <!-- 版本 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
        <!-- 关于应用 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>

        <!-- 关于项目 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_project"
            android:layout_marginTop="20dp"/>
        <!-- 关于作者 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
        <!-- 项目地址 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_source_code"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_code"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>