<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">
    <!-- 提示 -->
    <TextView
        android:id="@+id/dialog_budget_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_budget"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <!-- 编辑框 -->
    <EditText
        android:id="@+id/dialog_budget_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_budget_tv"
        android:hint="@string/yuan"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:inputType="numberDecimal"
        android:background="@color/white">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/dialog_budget_et"
        android:padding="10dp">
        <!-- 取消按钮 -->
        <Button
            android:id="@+id/dialog_budget_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/dialog_btn_bg"
            android:textStyle="bold"
            android:textColor="@color/green_006400"
            android:layout_marginRight="5dp"/>
        <!-- 确认按钮 -->
        <Button
            android:id="@+id/dialog_budget_btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:background="@drawable/record_btn_bg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

</RelativeLayout>