<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/grey_f3f3f3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 关于按钮 -->
        <Button
            android:id="@+id/dialog_more_btn_about"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:background="@color/white"
            android:drawableTop="@mipmap/it_guanyu"
            android:text="@string/about"/>
        <!-- 设置按钮 -->
        <Button
            android:id="@+id/dialog_more_btn_setting"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:background="@color/white"
            android:drawableTop="@mipmap/it_shezhi"
            android:layout_marginStart="15dp"
            android:text="@string/setting"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <!-- 历史按钮 -->
        <Button
            android:id="@+id/dialog_more_btn_history"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:background="@color/white"
            android:drawableTop="@mipmap/it_jilu"
            android:text="@string/history"/>
        <!-- 详情按钮 -->
        <Button
            android:id="@+id/dialog_more_btn_info"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:gravity="center"
            android:background="@color/white"
            android:drawableTop="@mipmap/it_xiqing"
            android:layout_marginStart="15dp"
            android:text="@string/info"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/dialog_more_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ih_error"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>



</LinearLayout>