<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_f3f3f3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp">
        <!-- 本月支出 -->
        <TextView
            android:id="@+id/item_mainlv_top_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_out"/>
        <!-- 支出金额 -->
        <TextView
            android:id="@+id/item_mainlv_top_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 0"
            android:layout_below="@id/item_mainlv_top_tv1"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>
        <!-- 显示/隐藏 -->
        <ImageView
            android:id="@+id/item_mainlv_top_iv_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ih_show"
            android:layout_alignTop="@id/item_mainlv_top_tv_out"/>
        <!-- 本月收入 -->
        <TextView
            android:id="@+id/item_mainlv_top_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_in"
            android:layout_below="@id/item_mainlv_top_tv_out"/>
        <!-- 收入金额 -->
        <TextView
            android:id="@+id/item_mainlv_top_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="￥ 0"
            android:layout_below="@id/item_mainlv_top_tv_out"
            android:layout_toEndOf="@id/item_mainlv_top_tv2"
            android:layout_marginStart="5dp"/>
        <!-- 预算金额 -->
        <TextView
            android:id="@+id/item_mainlv_top_tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 0"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/item_mainlv_top_tv2"
            android:layout_marginStart="5dp"/>
        <!-- 预算剩余 -->
        <TextView
            android:id="@+id/item_mainlv_top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:layout_toStartOf="@id/item_mainlv_top_tv_budget"
            android:layout_alignBottom="@id/item_mainlv_top_tv2"/>
        <!-- 查看图表分析 -->
        <TextView
            android:id="@+id/item_mainlv_top_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/see_analysis"
            android:textColor="@color/green_006400"
            android:drawablePadding="10dp"
            app:drawableLeftCompat="@mipmap/ih_biaoge" />
    </RelativeLayout>
    <TextView
        android:id="@+id/item_mainlv_top_tv_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistic_today"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>


</LinearLayout>