<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.InfoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <!-- 返回按钮 -->
        <ImageView
            android:id="@+id/info_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:onClick="onClick"
            android:src="@mipmap/it_back" />
        <!-- 页面标题 -->
        <TextView
            android:id="@+id/info_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/info"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <!-- 日历按钮 -->
        <ImageView
            android:id="@+id/info_iv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_rili"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:onClick="onClick"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="20dp">
        <!-- 日期标题 -->
        <TextView
            android:id="@+id/info_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000年00月账单"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <!-- 支出 -->
        <TextView
            android:id="@+id/info_tv_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共0笔支出，共￥0元。"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>
        <!-- 收入 -->
        <TextView
            android:id="@+id/info_tv_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共0笔收入，共￥0元。"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <!-- 支出按钮 -->
        <Button
            android:id="@+id/info_btn_outcome"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:text="@string/outcome"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/record_btn_bg"
            android:onClick="onClick"/>
        <!-- 收入按钮 -->
        <Button
            android:id="@+id/info_btn_income"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:text="@string/income"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/dialog_btn_bg"
            android:onClick="onClick"/>
    </LinearLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/info_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>